# sweater

./: .bumpversion.cfg  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
sweater/: __init__.py  cli.py  environment.yml
tests/: __init__.py  test_sweater.py
