[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "sweater"
version = "0.1.0"
homepage = "https://github.com/NordsofMorrow/sweater"
description = "A fabric-based remote command invoker for lazy people who do repetitive stuff."
authors = ["Nords Morrow <nordsofmorrow@protonmail.com>"]
readme = "README.md"
license =  "BSD-3-Clause"
classifiers=[
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
]
packages = [
    { include = "sweater" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
click = "8.0.1"
dynaconf = "^3.1.12"
paramiko = "^3.0.0"
fabric = "^3.0.0"

black  = { version = "^23.1.0", optional = true}
isort  = { version = "^5.12.0", optional = true}
flake8  = { version = "^6.0.0", optional = true}
flake8-docstrings = { version = "^1.7.0", optional = true }
mypy = {version = "^1.0.0", optional = true}
pytest  = { version = "^7.0", optional = true}
pytest-cov  = { version = "^4.0.0", optional = true}
tox  = { version = "^4.3.0", optional = true}
virtualenv  = { version = "^20.15.0", optional = true}
pip  = { version = "^23.0.1", optional = true}
mkdocs  = { version = "^1.4.2", optional = true}
mkdocs-include-markdown-plugin  = { version = "^4.0.0", optional = true}
mkdocs-material  = { version = "^9.0.0", optional = true}
mkdocstrings  = { version = "^0.20.0", optional = true}
mkdocstrings-python = { version = "^0.8.3", optional = true}
mkdocs-material-extensions  = { version = "^1.1", optional = true}
twine  = { version = "^4.0.0", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
pre-commit = {version = "^3.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocsstrings-python",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.poetry.scripts]
sweater = 'sweater.cli:main'

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py
